# compilers

./: .gitignore  setup.sh  simple00.cpp  week10_how_to_compile_llvm_on_ubuntu_or_debian.ipynb
BrainF/: CMakeLists.txt  simplecito.cpp  test.bf
pc2/: CMakeLists.txt  main.cpp  pcdos.g4  pcdosVisitorImpl.cpp  pcdosVisitorImpl.h
week01/: simple.cpp  simple.h  simpletest.cpp
week02_lexers/: lexer1.c  lexer2.l  lexer3.l  test.c
week03_parsers/: Expr.g4  calc.y  calclexer.c
week04_parsers2/: ambiguity.c  expr2.g4
week05_parser3/: ExprParser.g4
week05_symbol_table/: ExprLexer.g4
week06/: Test.java
week07/: EvalVisitorImpl.java  LabeledExpr.g4  tpolish.expr
week07/LabeledExpr/: Calc.java
week07/LabeledExprCpp/: .clangd  EvalVisitorImpl.h  test2.expr
week07/SimpleExpr/: Expr.g4  ExprJoyRide.java
week07/SimpleExprPolish/: Calc.java  LabeledExpr.g4
week09/: file.c  lldbtest.cpp
week10brainf/: BrainF.cpp  BrainFDriver.cpp  CMakeLists.txt  weird.txt
week11/: simple.cpp  toy.cpp
week12/: simple.cpp  toy.cpp
week12kaleido1/: example0.k  example1.k  toy.cpp
week13/: .clangd
week14/: CMakeLists.txt  mainllvm.cpp  mainllvm.h
